# rust-test

./: .gitignore  README.md
old-world-builder-rust/: .env  .env.sample  .gitignore  Cargo.toml  Makefile  README.md
old-world-builder-rust/.sqlx/: query-112c91121cee1d0039ecdd8abe0032eb6156043c1ce901812f84c4f5d6ed3bc1.json  query-384d8149fb04e4b1155d175b5d43a056ccfd7d4be8b5912b4af11f35b2e77518.json  query-6e5cfbfbf5fd48118377999cc6e905a9be013f4d1f4c500ec2db397ff978090a.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-d6ebed06c1254c04e86b5d64e026ac5ba39915fed7b3c65bddb450e080e89bab.json  query-edb57fc23ce192e3f5ecc8e1f03ce6ea952b820b233a4368d40f49d802add08f.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
old-world-builder-rust/db/: docker-compose.yml
old-world-builder-rust/db/migrations/: 20250626214200_add_users.sql
old-world-builder-rust/frontend/: package-lock.json  package.json
old-world-builder-rust/frontend/src/: App.vue
old-world-builder-rust/frontend/src/router/: index.ts
old-world-builder-rust/frontend/src/stores/: auth.ts  requester.ts  (+2 more)
old-world-builder-rust/migrations/: 20250707195827_add_users.up.sql  20250710160208_add_stats.down.sql  20250710160208_add_stats.up.sql
old-world-builder-rust/src/: main.rs
old-world-builder-rust/src/api/: mod.rs
old-world-builder-rust/src/middleware/: auth.rs
old-world-builder-rust/src/repository/: games.rs  users.rs
old-world-builder-rust/src/types/: games.rs  mod.rs  stats.rs  users.rs
old-world-builder-rust/tests/: repos_users.rs
(+26 files in other folders)
