[package]
name = "old-world-builder-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "json", "time", "chrono" ] }
pollster = "0.4"
tokio = "1.45.1"
actix-rt = "2.10.0"
chrono = { version = "0.4.*", features = ["serde"] }
