[package]
name = "old-world-builder-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio", "postgres", "json", "chrono"
] }
pollster = "0.4"
tokio = "1.46.1"
actix-rt = "2.10.0"
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
time = "0.3.41"
serial_test = "3.2"
bcrypt = "0.17.0"
